syntax = "proto3";

package race;

message Race {
  string race_id = 1;
  string name = 2;
  string date = 3;
  repeated Participant participants = 4;
}

message Participant {
  string driver_id = 1;
  string car_id = 2;
}